Corrigindo warnings do Vue: adicionando propriedades mostrarDashboard e mostrarMeusPlantoes

--- a/index.html
+++ b/index.html
@@ -425,12 +425,15 @@
                     fecharModal,
                     fecharModalCandidatura,
                     salvarPlantao,
+                    cadastrarPlantao,
                     mostrarModalCandidatura,
                     nomeCandidato,
                     confirmarCandidatura,
                     getCandidaturas,
                     plantaoSelecionado,
-                    formatarData
+                    formatarData,
+                    mostrarDashboard,
+                    mostrarMeusPlantoes
                 };
             }
         }).mount('#app');
