--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                                     <span class="text-xs bg-blue-100 text-blue-800 px-2 py-1 rounded-full">{{ getCandidaturas(plantao.id) }}/3 candidatos</span>
                                     <h3 class="font-medium">{{ formatarData(plantao.data) }}</h3>
                                     <p class="text-gray-600">Turno: {{ plantao.turno }}</p>
-                                    <p class="text-gray-600">Letra: {{ plantao.letra }} <span v-if="plantao.candidatoSelecionado" class="bg-green-100 text-green-800 px-2 py-1 rounded-full font-bold ml-2">Contemplado: {{ plantao.candidatoSelecionado }}</span></p>
+                                    <p class="text-gray-600">Tipo de Vaga: {{ plantao.tipoVaga }} <span v-if="plantao.candidatoSelecionado" class="bg-green-100 text-green-800 px-2 py-1 rounded-full font-bold ml-2">Contemplado: {{ plantao.candidatoSelecionado }}</span></p>
                                 </div>
-                                <button @click="candidatar(plantao.id)" 
+                                <button @click="abrirModalCandidatura(plantao)" 
                                         class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
                                     Candidatar
                                 </button>
@@ -207,26 +207,49 @@
                 </div>
 
                 <!-- Minhas Candidaturas -->
-                <div class="bg-white rounded-lg shadow-md p-6">
+                <div class="bg-white rounded-lg shadow-md p-6 mt-6">
                     <h2 class="text-xl font-semibold mb-4">Minhas Candidaturas</h2>
-                    <div class="space-y-4">
-                        <div v-for="candidatura in minhasCandidaturas" :key="candidatura.id"
-                             class="border p-4 rounded-lg">
+                    <div v-if="minhasCandidaturas.length === 0" class="text-gray-500">
+                        Você ainda não se candidatou a nenhum plantão.
+                    </div>
+                    <div v-else class="space-y-4">
+                        <div v-for="candidatura in minhasCandidaturas" :key="candidatura.id" 
+                             class="border p-4 rounded-lg" 
+                             :class="{'bg-green-50': candidatura.status === 'Aprovado', 'bg-red-50': candidatura.status === 'Não selecionado', 'bg-gray-50': candidatura.status === 'Pendente'}">
                             <div class="flex justify-between items-center">
                                 <div>
                                     <h3 class="font-medium">{{ formatarData(candidatura.data) }}</h3>
-                                    <p class="text-gray-600">Status: {{ candidatura.status }}</p>
-                                    <p v-if="candidatura.status === 'Aprovado'" class="text-green-600 font-bold">Você foi selecionado!</p>
-                                    <button v-if="candidatura.status === 'Aprovado'" @click="desistirCandidatura(candidatura.id)" class="text-red-500 hover:underline">Desistir</button>
-                                </div>                                
-                                <span :class="{'text-green-500': candidatura.status === 'Aprovado',
-                                               'text-yellow-500': candidatura.status === 'Pendente',
-                                               'text-red-500': candidatura.status === 'Não selecionado'}"
-                                      class="flex items-center">
-                                    <span class="mr-2 text-xl">●</span>
-                                    <span v-if="candidatura.status === 'Aprovado'" class="bg-green-100 text-green-800 px-2 py-1 rounded-full text-xs">Contemplado!</span>
-                                    <span v-if="candidatura.status === 'Pendente'" class="bg-yellow-100 text-yellow-800 px-2 py-1 rounded-full text-xs">Aguardando sorteio</span>
-                                </span>
+                                    <p class="text-gray-600">Status: 
+                                        <span :class="{
+                                            'text-yellow-600': candidatura.status === 'Pendente',
+                                            'text-green-600 font-bold': candidatura.status === 'Aprovado',
+                                            'text-red-600': candidatura.status === 'Não selecionado'
+                                        }">{{ candidatura.status }}</span>
+                                    </p>
+                                    <p class="text-gray-600">Turno: {{ candidatura.turno }}</p>
+                                    <p class="text-gray-600">Tipo de Vaga: {{ candidatura.tipoVaga }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Meus Plantões Confirmados -->
+                <div class="bg-white rounded-lg shadow-md p-6 mt-6">
+                    <h2 class="text-xl font-semibold mb-4">Meus Plantões Confirmados</h2>
+                    <div v-if="!minhasCandidaturas.some(c => c.status === 'Aprovado')" class="text-gray-500">
+                        Você ainda não tem plantões confirmados.
+                    </div>
+                    <div v-else class="space-y-4">
+                        <div v-for="candidatura in minhasCandidaturas.filter(c => c.status === 'Aprovado')" :key="candidatura.id" 
+                             class="border p-4 rounded-lg bg-green-50">
+                            <div class="flex justify-between items-center">
+                                <div>
+                                    <h3 class="font-medium">{{ formatarData(candidatura.data) }}</h3>
+                                    <p class="text-gray-600">Turno: {{ candidatura.turno }}</p>
+                                    <p class="text-gray-600">Tipo de Vaga: {{ candidatura.tipoVaga }}</p>
+                                    <p class="text-green-600 font-bold">Status: Confirmado</p>
+                                </div>
                             </div>
                         </div>
                     </div>
