--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                     <p class="text-gray-600">Turno: {{ plantao.turno }}</p>
                                     <p class="text-gray-600">Tipo de Vaga: {{ plantao.tipoVaga }} <span v-if="plantao.candidatoSelecionado" class="bg-green-100 text-green-800 px-2 py-1 rounded-full font-bold ml-2">Contemplado: {{ plantao.candidatoSelecionado }}</span></p>
                                 </div>
-                                <button @click="abrirModalCandidatura(plantao)" 
+                                <button @click="() => { plantaoSelecionado = plantao; mostrarModalCandidatura = true; }" 
                                         class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
                                     Candidatar
                                 </button>
